# lexpar_c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  code.c  config.mk  error_log.txt  general.mk  json.c  linux.mk  salida.txt  salida_grpof.txt  windows.mk
examples/: code.c  json.c
include/: ast.h  ast_c.h  global.h  json_c.h  lexer.h  parser.h  token.h
src/: ast.c  ast_c.c  json_c.c  lexer.c  parser.c  token.c
